namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restaurant-prod
  labels:
    app.kubernetes.io/part-of: restaurant-company
    environment: production
