service.yaml
apiVersion: v1
kind: Service
metadata:
  name: restaurant-company
  namespace: restaurant-prod
  labels:
    app: restaurant-company

spec:
  type: ClusterIP

  selector:
    app: restaurant-company

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
